--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: TimeVault Build and Sign
+name: TimeVault Build (Cargo Tauri)
 
 on:
   push:
@@ -22,14 +22,14 @@ jobs:
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+
+      - name: Install JS dependencies
         run: npm install
 
-      - name: Build frontend
-        run: npm run build
-
-      - name: Build Tauri app
-        run: npm run tauri build
+      - name: Build Tauri app (Cargo)
+        run: cargo tauri build
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
@@ -37,7 +37,8 @@ jobs:
           name: timevault-build
           path: |
             src-tauri/target/release/bundle/
-            dist/
+
+
 
       # - name: Upload to SignPath for signing
       #   uses: signpath/github-action@v1
