--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
+      - name: Install Tauri CLI
+        run: cargo install tauri-cli
+
       - name: Install JS dependencies
         run: npm install
 
@@ -37,8 +40,6 @@ jobs:
           name: timevault-build
           path: |
             src-tauri/target/release/bundle/
-
-
 
       # - name: Upload to SignPath for signing
       #   uses: signpath/github-action@v1
