--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,14 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Tauri CLI
-        run: cargo install tauri-cli
+        run: cargo install tauri-cli --locked
 
       - name: Install JS dependencies
-        run: npm install
+        run: |
+          npm install
+          cd vault-frontend
+          npm install
+          cd ..
 
       - name: Build Tauri app (Cargo)
         run: cargo tauri build
@@ -40,6 +44,7 @@ jobs:
           name: timevault-build
           path: |
             src-tauri/target/release/bundle/
+
 
       # - name: Upload to SignPath for signing
       #   uses: signpath/github-action@v1
