--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,18 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libsoup-3.0-dev \
+            webkit2gtk-4.1 \
+            build-essential \
+            curl \
+            wget \
+            file
 
       - name: Install Tauri CLI
         run: cargo install tauri-cli --locked
@@ -44,7 +55,6 @@ jobs:
           name: timevault-build
           path: |
             src-tauri/target/release/bundle/
-
 
       # - name: Upload to SignPath for signing
       #   uses: signpath/github-action@v1
