--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           cd ..
 
       - name: Build Tauri app (Linux)
-        run: cargo tauri build -- --release
+        run: cargo tauri build
 
       - name: List Linux build artifacts
         run: ls -R src-tauri/target/release/bundle/
@@ -85,7 +85,7 @@ jobs:
           cd ..
 
       - name: Build Tauri app (Windows)
-        run: cargo tauri build -- --release --target x86_64-pc-windows-msvc
+        run: cargo tauri build -- --target x86_64-pc-windows-msvc
 
       - name: List Windows build artifacts
         run: dir src-tauri\target\release\bundle\ /s
@@ -105,8 +105,44 @@ jobs:
       #     input-artifact-path: src-tauri/target/release/bundle/msi/TimeVault_1.0.1_x64_en-US.msi
       #     signing-policy-slug: default
 
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install Tauri CLI
+        run: cargo install tauri-cli --locked
+
+      - name: Install JS dependencies
+        run: |
+          npm install
+          cd vault-frontend
+          npm install
+          cd ..
+
+      - name: Build Tauri app (macOS)
+        run: cargo tauri build
+
+      - name: List macOS build artifacts
+        run: ls -R src-tauri/target/release/bundle/
+
+      - name: Upload macOS build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: timevault-macos
+          path: "src-tauri/target/release/bundle/**/*"
+
   release:
-    needs: [build-linux, build-windows]
+    needs: [build-linux, build-windows, build-macos]
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
@@ -122,6 +158,12 @@ jobs:
           name: timevault-windows
           path: dist/windows
 
+      - name: Download macOS build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: timevault-macos
+          path: dist/macos
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
@@ -132,5 +174,6 @@ jobs:
           files: |
             dist/linux/**
             dist/windows/**
+            dist/macos/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
