--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*'
   pull_request:
 
 jobs:
@@ -48,16 +46,13 @@ jobs:
           cd ..
 
       - name: Build Tauri app (Linux)
-        run: cargo tauri build -- --release
-
-      - name: List Linux build artifacts
-        run: ls -R src-tauri/target/release/bundle/
+        run: cargo tauri build
 
       - name: Upload Linux build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: timevault-linux
-          path: "src-tauri/target/release/bundle/**/*"
+          path: src-tauri/target/release/bundle/**/*
 
   build-windows:
     runs-on: windows-latest
@@ -84,52 +79,19 @@ jobs:
           cd ..
 
       - name: Build Tauri app (Windows)
-        run: cargo tauri build -- --release --target x86_64-pc-windows-msvc
-
-      - name: List Windows build artifacts
-        run: dir src-tauri\target\release\bundle\ /s
+        run: cargo tauri build --target x86_64-pc-windows-msvc
 
       - name: Upload Windows build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: timevault-windows
-          path: "src-tauri/target/release/bundle/windows/**/*"
+          path: src-tauri/target/release/bundle/windows/**/*
 
-      # - name: Uploading to SignPath for signing
+      # - name: Upload to SignPath for signing
       #   uses: signpath/github-action@v1
       #   with:
-      #     organization-id: TimeVault
+      #     organization-id: yorg-id
       #     project-id: ${{ secrets.SIGNPATH_PROJECT_ID }}
       #     api-token: ${{ secrets.SIGNPATH_TOKEN }}
       #     input-artifact-path: src-tauri/target/release/bundle/msi/TimeVault_1.0.1_x64_en-US.msi
       #     signing-policy-slug: default
-
-  release:
-    needs: [build-linux, build-windows]
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Linux build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: timevault-linux
-          path: dist/linux
-
-      - name: Download Windows build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: timevault-windows
-          path: dist/windows
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          name: "TimeVault ${{ github.ref_name }}"
-          body: "Automated release for version ${{ github.ref_name }}."
-          draft: false
-          prerelease: false
-          files: |
-            dist/linux/**
-            dist/windows/**
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
